"""Shield moderation outcomes for the responses pipeline."""

from typing import Annotated, Literal

from ogx_api.openai_responses import (
    OpenAIResponseMessage as ResponseMessage,
)
from pydantic import BaseModel, Field


class ShieldModerationPassed(BaseModel):
    """Shield moderation passed; no refusal."""

    decision: Literal["passed"] = "passed"


class ShieldModerationBlocked(BaseModel):
    """Shield moderation blocked the content; refusal details are present."""

    decision: Literal["blocked"] = "blocked"
    message: str
    moderation_id: str

    @property
    def refusal_response(self) -> ResponseMessage:
        """Build a ResponseMessage carrying the shield's refusal text."""
        return ResponseMessage(
            role="assistant",
            content=self.message,
        )


ShieldModerationResult = Annotated[
    ShieldModerationPassed | ShieldModerationBlocked,
    Field(discriminator="decision"),
]
