@startuml classes
set namespaceSeparator none
class "AgentTurnAccumulator" as src.models.common.agents.turn_accumulator.AgentTurnAccumulator {
  chunk_id : int
  emitted_tool_call_ids : set[str]
  emitted_tool_result_ids : set[str]
  rag_id_mapping : Final[dict[str, str]]
  round_increment_pending : bool
  run_result : Optional[AgentRunResult[str]]
  seen_docs : set[tuple[str, str]]
  text_parts : list[str]
  tool_round : int
  turn_summary
  vector_store_ids : Final[list[str]]
  increment_round_if_pending() -> None
}
class "Attachment" as src.models.common.query.Attachment {
  attachment_type : str
  content : str
  content_type : str
  model_config : dict
  validate_image_attachment() -> Self
}
class "CatalogModel" as src.models.common.models.CatalogModel {
  api_model_type : str
  identifier : str
  metadata : dict[str, Any]
  model_type : str
  provider_id : str
  provider_resource_id : str
  type : str
}
class "CatalogShield" as src.models.common.shields.CatalogShield {
  config : dict[str, Any]
  name : str
  provider_id : Literal['question_validity', 'redaction']
  type : Literal['shield']
}
class "CatalogTool" as src.models.common.tools.CatalogTool {
  description : str
  identifier : str
  parameters : list[CatalogToolParameter]
  provider_id : str
  server_source : str
  toolgroup_id : str
  type : str
}
class "CatalogToolParameter" as src.models.common.tools.CatalogToolParameter {
  default : Optional[Any]
  description : str
  name : str
  parameter_type : str
  required : bool
}
class "ConversationData" as src.models.common.conversation.ConversationData {
  conversation_id : str
  last_message_timestamp : float
  topic_summary : Optional[str]
}
class "ConversationDetails" as src.models.common.conversation.ConversationDetails {
  conversation_id : str
  created_at : Optional[str]
  last_message_at : Optional[str]
  last_used_model : Optional[str]
  last_used_provider : Optional[str]
  message_count : Optional[int]
  topic_summary : Optional[str]
}
class "ConversationTurn" as src.models.common.conversation.ConversationTurn {
  completed_at : str
  messages : list[Message]
  model : str
  provider : str
  started_at : str
  tool_calls : list[ToolCallSummary]
  tool_results : list[ToolResultSummary]
}
class "EndEventData" as src.models.common.agents.stream_payloads.EndEventData {
  context_status
  input_tokens : int
  output_tokens : int
  referenced_documents : list[ReferencedDocument]
  truncated : Optional[bool]
}
class "EndStreamPayload" as src.models.common.agents.stream_payloads.EndStreamPayload {
  available_quotas : dict[str, int]
  data
  event : Literal['end']
  create() -> Self
  serialize_text() -> str
}
class "ErrorEventData" as src.models.common.agents.stream_payloads.ErrorEventData {
  cause : str
  response : str
  status_code : int
}
class "ErrorStreamPayload" as src.models.common.agents.stream_payloads.ErrorStreamPayload {
  data
  event : Literal['error']
  create() -> Self
  from_error_response(error_response: AbstractErrorResponse) -> Self
  serialize_text() -> str
}
class "FeedbackCategory" as src.models.common.feedback.FeedbackCategory {
  name
}
class "HealthStatus" as src.models.common.health.HealthStatus {
  name
}
class "InputToolMCP" as src.models.common.responses.types.InputToolMCP {
  authorization : Optional[str]
}
class "InterruptedEventData" as src.models.common.agents.stream_payloads.InterruptedEventData {
  request_id : str
}
class "InterruptedStreamPayload" as src.models.common.agents.stream_payloads.InterruptedStreamPayload {
  data
  event : Literal['interrupted']
  create() -> Self
}
class "ListedMcpTool" as src.models.common.tools.ListedMcpTool {
  description : Optional[str]
  input_schema : Optional[dict[str, Any]]
  name : str
}
class "MCPListToolsSummary" as src.models.common.turn_summary.MCPListToolsSummary {
  server_label : str
  tools : list[ToolInfoSummary]
}
class "MCPServerAuthInfo" as src.models.common.mcp.MCPServerAuthInfo {
  client_auth_headers : list[str]
  name : str
}
class "MCPServerInfo" as src.models.common.mcp.MCPServerInfo {
  name : str
  provider_id : str
  source : str
  url : str
}
class "Message" as src.models.common.conversation.Message {
  content : str
  referenced_documents : Optional[list[ReferencedDocument]]
  type : Literal['user', 'assistant', 'system', 'developer']
}
class "ProviderHealthStatus" as src.models.common.health.ProviderHealthStatus {
  message : Optional[str]
  provider_id : str
  status : str
}
class "RAGChunk" as src.models.common.turn_summary.RAGChunk {
  attributes : Optional[dict[str, Any]]
  content : str
  score : Optional[float]
  source : Optional[str]
}
class "RAGContext" as src.models.common.turn_summary.RAGContext {
  context_text : str
  rag_chunks : list[RAGChunk]
  referenced_documents : list[ReferencedDocument]
}
class "ReferencedDocument" as src.models.common.turn_summary.ReferencedDocument {
  doc_title : Optional[str]
  doc_url : Optional[AnyUrl]
  document_id : Optional[str]
  source : Optional[str]
}
class "ResponseGeneratorContext" as src.models.common.responses.contexts.ResponseGeneratorContext {
  client
  conversation_id : str
  inline_rag_context
  model_id : str
  moderation_result
  query_request
  rag_id_mapping : dict[str, str]
  request_id : str
  skip_userid_check : bool
  started_at : str
  user_id : str
  vector_store_ids : list[str]
}
class "ResponsesApiParams" as src.models.common.responses.responses_api_params.ResponsesApiParams {
  conversation : str
  extra_headers : Optional[dict[str, str]]
  include : Optional[list[IncludeParameter]]
  input
  instructions : Optional[str]
  max_infer_iters : Optional[int]
  max_output_tokens : Optional[int]
  max_tool_calls : Optional[int]
  metadata : Optional[dict[str, str]]
  model : str
  omit_conversation : bool
  parallel_tool_calls : Optional[bool]
  previous_response_id : Optional[str]
  prompt : Optional[Prompt]
  reasoning : Optional[Reasoning]
  safety_identifier : Optional[str]
  store : bool
  stream : bool
  temperature : Optional[float]
  text : Optional[Text]
  tool_choice : Optional[ToolChoice]
  tools : Optional[list[InputTool]]
  echoed_params(rag_id_mapping: Mapping[str, str]) -> dict[str, Any]
  model_dump() -> dict[str, Any]
}
class "ResponsesContext" as src.models.common.responses.contexts.ResponsesContext {
  auth : tuple[str, str, bool, str]
  background_tasks : Optional[BackgroundTasks]
  client
  compacted_original_input : Optional[ResponseInput]
  endpoint_path : str
  filter_server_tools : bool
  generate_topic_summary : bool
  inline_rag_context
  input_text : str
  model_config
  moderation_result
  rh_identity_context : tuple[str, str]
  root_span
  started_at : datetime
  user_agent : Optional[str]
}
class "ResponsesConversationContext" as src.models.common.responses.responses_conversation_context.ResponsesConversationContext {
  conversation : str
  generate_topic_summary : bool
  model_config
  user_conversation : Optional[UserConversation]
}
class "ShieldModerationBlocked" as src.models.common.moderation.ShieldModerationBlocked {
  decision : Literal['blocked']
  message : str
  moderation_id : str
  refusal_response
}
class "ShieldModerationPassed" as src.models.common.moderation.ShieldModerationPassed {
  decision : Literal['passed']
}
class "SkillMetadata" as src.models.common.skills.SkillMetadata {
  description : str
  name : str
}
class "SolrVectorSearchRequest" as src.models.common.query.SolrVectorSearchRequest {
  filters : Optional[dict[str, Any]]
  mode : Optional[Literal['semantic', 'hybrid', 'lexical', 'keyword']]
  model_config
  coerce_legacy_plain_dict(data: Any) -> Any
}
class "StartEventData" as src.models.common.agents.stream_payloads.StartEventData {
  conversation_id : str
  request_id : str
}
class "StartStreamPayload" as src.models.common.agents.stream_payloads.StartStreamPayload {
  data
  event : Literal['start']
  create() -> Self
}
class "StreamPayloadBase" as src.models.common.agents.stream_payloads.StreamPayloadBase {
  model_config
  serialize_json() -> str
  serialize_text() -> str
}
class "TokenChunkData" as src.models.common.agents.stream_payloads.TokenChunkData {
  id : int
  token : str
}
class "TokenStreamPayload" as src.models.common.agents.stream_payloads.TokenStreamPayload {
  data
  event : Literal['token']
  create() -> Self
  serialize_text() -> str
}
class "ToolCallStreamPayload" as src.models.common.agents.stream_payloads.ToolCallStreamPayload {
  data
  event : Literal['tool_call']
  serialize_text() -> str
}
class "ToolCallSummary" as src.models.common.turn_summary.ToolCallSummary {
  args : dict[str, Any]
  id : str
  name : str
  type : str
}
class "ToolInfoSummary" as src.models.common.turn_summary.ToolInfoSummary {
  description : Optional[str]
  input_schema : Optional[dict[str, Any]]
  name : str
}
class "ToolResultStreamPayload" as src.models.common.agents.stream_payloads.ToolResultStreamPayload {
  data
  event : Literal['tool_result']
  serialize_text() -> str
}
class "ToolResultSummary" as src.models.common.turn_summary.ToolResultSummary {
  content : str
  id : str
  round : int
  status : str
  type : str
}
class "Transcript" as src.models.common.transcripts.Transcript {
  attachments : list[dict[str, Any]]
  llm_response : str
  metadata
  query_is_valid : bool
  rag_chunks : list[dict[str, Any]]
  redacted_query : str
  tool_calls : list[dict[str, Any]]
  tool_results : list[dict[str, Any]]
  truncated : bool
}
class "TranscriptMetadata" as src.models.common.transcripts.TranscriptMetadata {
  conversation_id : str
  model : str
  provider : Optional[str]
  query_model : Optional[str]
  query_provider : Optional[str]
  timestamp : str
  user_id : str
}
class "TurnCompleteStreamPayload" as src.models.common.agents.stream_payloads.TurnCompleteStreamPayload {
  data
  event : Literal['turn_complete']
  create() -> Self
}
class "TurnSummary" as src.models.common.turn_summary.TurnSummary {
  id : str
  llm_response : str
  next_chunk_id : int
  output_items : list[OpenAIResponseOutput]
  partial_tokens : list[str]
  rag_chunks : list[RAGChunk]
  referenced_documents : list[ReferencedDocument]
  token_usage
  tool_calls : list[ToolCallSummary]
  tool_results : list[ToolResultSummary]
}
src.models.common.agents.stream_payloads.EndStreamPayload --|> src.models.common.agents.stream_payloads.StreamPayloadBase
src.models.common.agents.stream_payloads.ErrorStreamPayload --|> src.models.common.agents.stream_payloads.StreamPayloadBase
src.models.common.agents.stream_payloads.InterruptedStreamPayload --|> src.models.common.agents.stream_payloads.StreamPayloadBase
src.models.common.agents.stream_payloads.StartStreamPayload --|> src.models.common.agents.stream_payloads.StreamPayloadBase
src.models.common.agents.stream_payloads.TokenStreamPayload --|> src.models.common.agents.stream_payloads.StreamPayloadBase
src.models.common.agents.stream_payloads.ToolCallStreamPayload --|> src.models.common.agents.stream_payloads.StreamPayloadBase
src.models.common.agents.stream_payloads.ToolResultStreamPayload --|> src.models.common.agents.stream_payloads.StreamPayloadBase
src.models.common.agents.stream_payloads.TurnCompleteStreamPayload --|> src.models.common.agents.stream_payloads.StreamPayloadBase
src.models.common.agents.stream_payloads.EndEventData --* src.models.common.agents.stream_payloads.EndStreamPayload : data
src.models.common.agents.stream_payloads.ErrorEventData --* src.models.common.agents.stream_payloads.ErrorStreamPayload : data
src.models.common.agents.stream_payloads.InterruptedEventData --* src.models.common.agents.stream_payloads.InterruptedStreamPayload : data
src.models.common.agents.stream_payloads.StartEventData --* src.models.common.agents.stream_payloads.StartStreamPayload : data
src.models.common.agents.stream_payloads.TokenChunkData --* src.models.common.agents.stream_payloads.TokenStreamPayload : data
src.models.common.agents.stream_payloads.TokenChunkData --* src.models.common.agents.stream_payloads.TurnCompleteStreamPayload : data
src.models.common.transcripts.TranscriptMetadata --* src.models.common.transcripts.Transcript : metadata
@enduml
